--- a/templates/index.html
+++ b/templates/index.html
@@ -6,24 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href={{url_for('static',filename='cm-121x127.jpg')}} type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>CarMonster</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" type="text/css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css" type="text/css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css" type="text/css">
-  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css" type="text/css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css" type="text/css">
-  <link rel="stylesheet" href="assets/theme/css/style.css" type="text/css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href={{url_for('static',filename='mobirise2.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='tether.min.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='bootstrap.min.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='bootstrap-grid.min.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='bootstrap-reboot.min.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='jquery.formstyler.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='jquery.formstyler.theme.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='jquery.datetimepicker.min.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='style.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='styles.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='style_theme.css')}}>
+  <link rel="preload" as="style" href={{url_for('static',filename='mbr-additional.css')}}>
+  <link rel="stylesheet" href={{url_for('static',filename='mbr-additional.css')}} type="text/css">
+
   
   
   
@@ -38,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobiri.se">
-                        <img src="assets/images/logo.jpg" alt="Mobirise" style="height: 3.8rem;">
+                        <img src="assets/images/cm-121x127.jpg" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">CarMonster</a></span>
